# cf-tool-rs

./: Cargo.toml  README.md
src/: config.rs  lib.rs  main.rs  util.rs
src/client/: login.rs  mod.rs  parse.rs  race.rs  submit.rs
